Fixed checkout flow
No payment solution added
