# Backend/Dto/AddressDto.cs
@@ -1,0 +1,17 @@
+﻿using System.ComponentModel.DataAnnotations;
+
+namespace Backend.Dto
+{
+    public class AddressDto
+    {
+        public string Street { get; set; } = string.Empty;
+
+        public string City { get; set; } = string.Empty;
+
+        public string State { get; set; } = string.Empty;
+
+        public string ZipCode { get; set; } = string.Empty;
+
+        public string Country { get; set; } = string.Empty;
+    }
+}
