# Backend/Dto/UserDto.cs
@@ -2,7 +2,7 @@
 {
     public class UserDto
     {
-        public string Id { get; set; } = string.Empty;
+        public string identityUserId { get; set; } = string.Empty;
         public string Email { get; set; } = string.Empty;
         public string? FullName { get; set; }
     }
