# Backend/Models/Address.cs
@@ -1,12 +1,11 @@
+using Backend.Dto;
+using Backend.Models;
 using System.ComponentModel.DataAnnotations;
-
-namespace Backend.Models;
 
 public class Address
 {
-    public int Id { get; set; }
-    public int UserId { get; set; }
-    public User? User { get; set; }
+    [Key]
+    public Guid Id { get; set; }
 
     [Required]
     public string Street { get; set; } = string.Empty;
@@ -14,6 +13,7 @@ public class Address
     [Required]
     public string City { get; set; } = string.Empty;
 
+    [Required]
     public string State { get; set; } = string.Empty;
 
     [Required]
@@ -21,4 +21,6 @@ public class Address
 
     [Required]
     public string Country { get; set; } = string.Empty;
+
+    public DateTime CreatedAt { get; set; } = DateTime.UtcNow;
 }
