# Backend/Models/OrderItem.cs
@@ -1,12 +1,22 @@
+using System.ComponentModel.DataAnnotations;
+using System.Text.Json.Serialization;
+
 namespace Backend.Models;
 
 public class OrderItem
 {
-    public int Id { get; set; }
-    public int OrderId { get; set; }
+    [Required]
+    public Guid Id { get; set; }
+    [Required]
+    public Guid OrderId { get; set; }
+    [Required, JsonIgnore]
     public Order? Order { get; set; }
+    [Required]
     public int ProductId { get; set; }
-    public Product? Product { get; set; }
+    [Required]
+    public Product Product { get; set; }
+    [Required]
     public int Quantity { get; set; }
+    [Required]
     public decimal Price { get; set; }
 }
